--- a/style.css
+++ b/style.css
@@ -1,4 +1,50 @@
-h2 {
-	margin:auto;
+body {
+	margin:0px;
+}
+h1 {
+	font-size: 40px;
+	color:#363636;
+}
+#imgBanner {
+	background-image: url("banner.jpg");
+	height:240px;
+	width: 100%;
+	position: relative;
+	border-top:1px solid #5C5C5C;
 
+}
+
+
+
+
+h2 {
+	text-align: center;
+	font-size: 40px;
+	color:#5C5C5C;
+	background-color: white;
+	z-index: 1;
+
+}
+
+.answerDiv {
+	text-align:center;
+	
+	color: #5C5C5C;
+	margin: auto;
+}
+
+
+
+hr {
+	position:relative;
+	top:-40px;
+	z-index: 0
+}
+
+#footer {
+	height: 200px;
+	width: 100%;
+	background-color: #5C5C5C;
+	position: relative;
+	top:100px;
 }
