--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
 *{
 	font-family: Roboto;
+	color: grey
 }
+h1 {
+	text-align: center;
+}
+#answer1 {text-align: center;}
+#answer2 {text-align: center;}
+#answer3 {text-align: center;}
+#answer4 {text-align: center;}
+#answer5 {text-align: center;}
+#answer6 {text-align: center;}
 #etsy {
-	color: grey;
 
 }
 #header {
